fix(projects): reject null backlog entries with a 400 and pin aiModel handling