@@ -2,7 +2,10 @@ package com.flowpilot.dto;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -14,9 +17,11 @@ public record BacklogEpicRequest(
         @Size(max = 255, message = "El título no puede superar los 255 caracteres") String title,
         String description,
         @Size(max = 10, message = "Una épica no puede tener más de 10 historias")
-        @Valid List<BacklogStoryRequest> stories) {
+        List<@Valid @NotNull(message = "La historia no puede ser nula") BacklogStoryRequest> stories) {
 
     public BacklogEpicRequest {
-        stories = stories == null ? List.of() : List.copyOf(stories);
+        stories = stories == null
+                ? List.of()
+                : Collections.unmodifiableList(new ArrayList<>(stories)); // tolerates null elements; bean validation rejects them
     }
 }
